module(name = "fizzbee")

# Go with gazelle see https://github.com/bazel-contrib/rules_go/blob/master/docs/go/core/bzlmod.md
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.34.0")

# External go deps
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# run "bazel mod tidy" to update these after updating go.mod
use_repo(
    go_deps,
    "com_github_golang_glog",
    "com_github_huandu_go_clone",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
    "net_starlark_go",
    "org_golang_google_protobuf",
    "org_golang_x_sys",
)

# Proto
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(
    name = "protobuf",
    version = "26.0",
    repo_name = "com_google_protobuf",
)

# Python rules and dependencies
bazel_dep(name = "rules_python", version = "0.31.0")

pip = use_extension("@rules_python//python:extensions.bzl", "pip")
pip.parse(
    name = "my_deps",
    requirements_lock = "//third_party:requirements_lock.txt",
)
use_repo(pip, "my_deps")
