load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = [
        "counter.go",
        "jsonmarshaller.go",
        "linear_collection.go",
        "permutations.go",
        "queue.go",
        "randomqueue.go",
        "stack.go",
        "starlark_role.go",
        "starlark_types.go",
        "starlarkstruct.go",
        "tri_state.go",
        "yaml.go",
    ],
    importpath = "github.com/fizzbee-io/fizzbee/lib",
    visibility = ["//visibility:public"],
    deps = [
        "//proto",
        "@com_github_huandu_go_clone//:go-clone",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@net_starlark_go//lib/math",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
        "@net_starlark_go//syntax",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_sys//cpu:go_default_library",
    ],
)

go_test(
    name = "lib_test",
    srcs = ["jsonmarshaller_test.go"],
    embed = [":lib"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@net_starlark_go//starlark",
    ],
)
