load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "modelchecker",
    srcs = [
        "channel_message.go",
        "checker.go",
        "clone.go",
        "clonehelper.go",
        "composition_types.go",
        "durability.go",
        "error.go",
        "graph.go",
        "invariants.go",
        "markovchain.go",
        "options.go",
        "perf_checker.go",
        "processor.go",
        "protopath.go",
        "starlark.go",
        "testconstants.go",
        "thread.go",
        "visualization.go",
    ],
    importpath = "github.com/fizzbee-io/fizzbee/modelchecker",
    visibility = ["//visibility:public"],
    deps = [
        "//lib",
        "//proto:proto_go_proto",
        "@com_github_golang_glog//:glog",
        "@com_github_huandu_go_clone//:go-clone",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
        "@net_starlark_go//syntax",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "modelchecker_test",
    srcs = [
        "checker_test.go",
        "graph_test.go",
        "invariants_test.go",
        "markovchain_test.go",
        "processor_test.go",
        "protopath_test.go",
        "starlark_test.go",
        "thread_test.go",
    ],
    data = [
        "//examples/comparisons",
        "//examples/tutorials",
    ],
    embed = [":modelchecker"],
    deps = [
        "//lib",
        "//proto:proto_go_proto",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@net_starlark_go//starlark",
        "@net_starlark_go//syntax",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
