java_library(
    name = "mbt_java_lib",
    srcs = glob(["**/*.java"]),
    javacopts = [
        "--release",
        "17",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_netty",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_services",
        "@maven//:io_grpc_grpc_stub",
        # --- Netty dependencies ---
        "@maven//:io_netty_netty_all",
        "@maven//:io_netty_netty_transport",
        "@maven//:io_netty_netty_transport_classes_epoll",
        "@maven//:io_netty_netty_transport_classes_kqueue",
        "@maven//:io_netty_netty_transport_native_unix_common",
    ],
)
